--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -10,9 +10,7 @@
     <img src="{{ include.post.image }}" alt="{{ include.post.image_alt | default: '' }}" loading="lazy" width="600" height="338">
   </a>
   {% else %}
-  <a href="{{ include.post.url | relative_url }}" class="card-image card-image--no-feature" tabindex="-1" aria-hidden="true">
-    <div class="card-image-placeholder"></div>
-  </a>
+  <a href="{{ include.post.url | relative_url }}" class="card-image card-image--no-feature" tabindex="-1" aria-hidden="true"></a>
   {% endif %}
 
   <div class="card-body">
